# immich_compactor

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
client_gen/immich_client/: Cargo.toml  README.md
client_gen/immich_client/.openapi-generator/: FILES
client_gen/immich_client/docs/: ActivitiesApi.md  ActivityCreateDto.md  ActivityResponseDto.md  ActivityStatisticsResponseDto.md  AddUsersDto.md  AdminOnboardingUpdateDto.md  AlbumResponseDto.md  AlbumStatisticsResponseDto.md  AlbumUserAddDto.md  AlbumUserCreateDto.md  AlbumUserRole.md  AlbumsAddAssetsDto.md  AlbumsAddAssetsResponseDto.md  AlbumsApi.md  AlbumsResponse.md  AlbumsUpdate.md  ApiKeyCreateDto.md  ApiKeyCreateResponseDto.md  ApiKeyResponseDto.md  ApiKeyUpdateDto.md  ApiKeysApi.md  AssetBulkDeleteDto.md  AssetBulkUpdateDto.md  AssetBulkUploadCheckDto.md  AssetBulkUploadCheckItem.md  AssetBulkUploadCheckResponseDto.md  AssetBulkUploadCheckResult.md  AssetCopyDto.md  AssetEditAction.md  AssetEditActionItemDto.md  AssetEditActionItemDtoParameters.md  AssetEditActionItemResponseDto.md  AssetEditsCreateDto.md  AssetEditsResponseDto.md  AssetFaceCreateDto.md  AssetFaceDeleteDto.md  AssetFaceResponseDto.md  AssetFaceUpdateDto.md  AssetFaceUpdateItem.md  AssetIdErrorReason.md  (+325 more)
client_gen/immich_client/src/apis/: activities_api.rs  albums_api.rs  api_keys_api.rs  assets_api.rs  authentication_admin_api.rs  authentication_api.rs  configuration.rs  database_backups_admin_api.rs  deprecated_api.rs  download_api.rs  duplicates_api.rs  faces_api.rs  jobs_api.rs  libraries_api.rs  maintenance_admin_api.rs  (+24 more)
(+363 files in other folders)
